--- a/index.html
+++ b/index.html
@@ -1,9 +1,122 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
-        
+        <meta charset="utf-8">
+        <title>Backgammon on its own page</title>
+        <link type ="text/css" rel="stylesheet" href="stylesheet.css" />
+        <script src="//code.jquery.com/jquery-1.11.2.min.js"></script>
     </head>
     <body>
-        <p>Hello World!</p>
+        <div class = "header">
+            <div class = "container">
+                <a href = "#" class = "logo-icon">
+                    <div> </div>
+                </a>
+                <ul class ="menu">
+                    <li><a href = "#">Home</a></li>
+                    <li><a href = "#">About</a></li>
+                    <li><a href = "#">Games</a></li>
+                </ul>
+            </div>
+        </div>
+        <div class = "backgammonControls">
+            <button type = "button" onclick = "backgammonGame()">Reset Board</button>
+            <button type = "button" id = "clearButton" onclick="">Clear Board</button>
+        <div id = "backgammonGame">
+            <table id = "backgammonTableOne">
+                <tr>
+                    <td id="T0"></td><td id="U0"></td><td id="V0"></td><td id="W0"></td><td id="X0"></td><td id="Y0">
+                </tr>
+                <tr>
+                    <td id="T1"></td><td id="U1"></td><td id="V1"></td><td id="W1"></td><td id="X1"></td><td id="Y1">
+                </tr>
+                <tr>
+                    <td id="T2"></td><td id="U2"></td><td id="V2"></td><td id="W2"></td><td id="X2"></td><td id="Y2">
+                </tr>
+                <tr>
+                    <td id="T3"></td><td id="U3"></td><td id="V3"></td><td id="W3"></td><td id="X3"></td><td id="Y3">
+                </tr>
+                <tr>
+                    <td id="T4"></td><td id="U4"></td><td id="V4"></td><td id="W4"></td><td id="X4"></td><td id="Y4">
+                </tr>                
+            </table>
+            <table id = "backgammonTableTwo">
+                <tr>
+                    <td id="N0"></td><td id="O0"></td><td id="P0"></td><td id="Q0"></td><td id="R0"></td><td id="S0">
+                </tr>
+                <tr>
+                    <td id="N1"></td><td id="O1"></td><td id="P1"></td><td id="Q1"></td><td id="R1"></td><td id="S1">
+                </tr>
+                <tr>
+                    <td id="N2"></td><td id="O2"></td><td id="P2"></td><td id="Q2"></td><td id="R2"></td><td id="S2">
+                </tr>
+                <tr>
+                    <td id="N3"></td><td id="O3"></td><td id="P3"></td><td id="Q3"></td><td id="R3"></td><td id="S3">
+                </tr>
+                <tr>
+                    <td id="N4"></td><td id="O4"></td><td id="P4"></td><td id="Q4"></td><td id="R4"></td><td id="S4">
+                </tr>                
+            </table>            
+            <table id = "backgammonTableThree">
+                <tr>
+                    <td id="M4"></td><td id="L4"></td><td id="K4"></td><td id="J4"></td><td id="I4"></td><td id="H4">
+                </tr>
+                <tr>
+                    <td id="M3"></td><td id="L3"></td><td id="K3"></td><td id="J3"></td><td id="I3"></td><td id="H3">
+                </tr>
+                <tr>
+                    <td id="M2"></td><td id="L2"></td><td id="K2"></td><td id="J2"></td><td id="I2"></td><td id="H2">
+                </tr>
+                <tr>
+                    <td id="M1"></td><td id="L1"></td><td id="K1"></td><td id="J1"></td><td id="I1"></td><td id="H1">
+                </tr>
+                <tr>
+                    <td id="M0"></td><td id="L0"></td><td id="K0"></td><td id="J0"></td><td id="I0"></td><td id="H0">
+                </tr>                
+            </table> 
+            <table id = "backgammonTableFour" onclick = "">
+                <tr>
+                    <td id="G4"></td><td id="F4"></td><td id="E4"></td><td id="D4"></td><td id="C4"></td><td id="B4">
+                </tr>
+                <tr>
+                    <td id="G3"></td><td id="F3"></td><td id="E3"></td><td id="D3"></td><td id="C3"></td><td id="B3">
+                </tr>
+                <tr>
+                    <td id="G2"></td><td id="F2"></td><td id="E2"></td><td id="D2"></td><td id="C2"></td><td id="B2">
+                </tr>
+                <tr>
+                    <td id="G1"></td><td id="F1"></td><td id="E1"></td><td id="D1"></td><td id="C1"></td><td id="B1">
+                </tr>
+                <tr>
+                    <td id="G0"></td><td id="F0"></td><td id="E0"></td><td id="D0"></td><td id="C0"></td><td id="B0">
+                </tr>                
+            </table>
+            <table id = "blackJail">
+                <tr><td id="BlackCell">0</td></tr>
+            </table>
+            <table id = "whiteJail">
+                <tr><td id = "WhiteCell">0</td></tr>
+            </table>
+            <table id = "dice" onclick="">
+                <tr>
+                    <td id = "die0" ></td>
+                    <td id = "die1" ></td>
+                </tr>
+            </table>
+            <table>
+                <tr>
+                    <td id = "BlackHome">0</td>
+                    <td id = "WhiteHome">0</td>
+                </tr>
+            </table>
+        </div>
+            <form>
+                <input type="text" id="guessInput" placeholder="Pick a checker to move">
+                <input type="button" id="bgFireButton" value="Reset Board!" onclick="">
+                <input type="button" id="endTurn" value="End Turn" onclick="">
+
+            </form>        
+        <script src="backgammon.js"></script>
+
     </body>
 </html>
