Add instructions to the page

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <div class = "backgammonControls">
             <button type = "button" onclick = "backgammonGame()">Reset Board</button>
             <button type = "button" id = "clearButton" onclick="">Clear Board</button>
+            <p>Use "reset board" to start game. High die goes first. Click on a checker and then a die or vice versa to move. Beware of game-crippling bugs!</p>
         <div id = "backgammonGame">
             <table id = "backgammonTableOne">
                 <tr>
